--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
         </div>
 
         <div class="buttons">
-            <div class ="buttons" data-value="AC">AC</div>  
-            <div class="buttons" data-value="DEL">DEL</div>           
-            <div class="buttons" data-value="%">%</div>  
-            <div class="buttons" data-value="+">+</div>  
+            <div class="button" data-value="AC">AC</div>  
+            <div class="button" data-value="DEL">DEL</div>           
+            <div class="button" data-value="%">%</div>  
+            <div class="button" data-value="+">+</div>  
 
-            <div class="buttons" data-value="7">7</div>  
-            <div class="buttons">8</div>  
-            <div class="buttons">9</div>  
-            <div class="buttons">-</div>
+            <div class="button" data-value="7">7</div>  
+            <div class="button">8</div>  
+            <div class="button">9</div>  
+            <div class="button">-</div>
 
-            <div class="buttons">4</div>  
-            <div class="buttons">5</div>  
-            <div class="buttons">6</div>  
-            <div class="buttons">*</div>
+            <div class="button">4</div>  
+            <div class="button">5</div>  
+            <div class="button">6</div>  
+            <div class="button">*</div>
 
-            <div class="buttons">1</div>  
-            <div class="buttons">2</div>  
-            <div class="buttons">3</div>
-            <div class="buttons">/</div>
+            <div class="button">1</div>  
+            <div class="button">2</div>  
+            <div class="button">3</div>
+            <div class="button">/</div>
 
-            <div class="buttons">0</div> 
-            <div class="buttons">.</div>
-            <div id="specialButton" class="buttons">=</div>
+            <div class="button">0</div> 
+            <div class="button">.</div>
+            <div id="specialButton" class="button">=</div>
           
         </div>
     </section>
