Modificarile stilistice facute

--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
         </div>
 
         <div class="buttons">
-            <div class="button" data-value="AC">AC</div>  
-            <div class="button" data-value="DEL">DEL</div>           
-            <div class="button" data-value="%">%</div>  
-            <div class="button" data-value="+">+</div>  
+            <div id="allClearButton" class="button">AC</div>  
+            <div id="deleteButton" class="button" >DEL</div>           
+            <div id="percentageButton" class="button" >%</div>  
+            <div id="addButton" class="button">+</div>  
 
-            <div class="button" data-value="7">7</div>  
+            <div class="button">7</div>  
             <div class="button">8</div>  
             <div class="button">9</div>  
-            <div class="button">-</div>
+            <div id="minusButton" class="button">-</div>
 
             <div class="button">4</div>  
             <div class="button">5</div>  
             <div class="button">6</div>  
-            <div class="button">*</div>
+            <div id="multiplyButton" class="button">*</div>
 
             <div class="button">1</div>  
             <div class="button">2</div>  
             <div class="button">3</div>
-            <div class="button">/</div>
+            <div id="divideButton" class="button">/</div>
 
             <div class="button">0</div> 
-            <div class="button">.</div>
-            <div id="specialButton" class="button">=</div>
+            <div id="pointButton" class="button">.</div>
+            <div  id="specialButton" class="button">=</div>
           
         </div>
     </section>
